@@ -1,0 +1,2 @@
+external foo : int = "%ignore";;
+let _ = foo ();;
